# police-py

./: README.md  main.py  pyproject.toml  run
.github/workflows/: build.yml
src/police_py/: availability.py  crime.py  forces.py  neighbourhood.py  stop_and_search.py
tests/: test_availability.py  test_crime.py  test_forces.py  test_neighbourhood.py  test_stop_and_search.py
